# streamhouse

./: .dockerignore  .env.dev  .env.example  .env.production.example  .gitignore  BUILD_STATUS.md  CODE_OF_CONDUCT.md  COMMANDS_CHEAT_SHEET.md  COMPLETE_ROADMAP_TO_WARPSTREAM_PLUS.md  CONSUMING_DATA_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DEFERRED_WORK.md  DEMO.md  DEMO_COMPLETE.md  Dockerfile  Dockerfile.prebuilt  FIXED_TESTING_GUIDE.md  GO_LIVE_CHECKLIST.md  LICENSE  Makefile  PHASE_10_COMPLETE.md  PHASE_10_KICKOFF.md  PHASE_7_COMPLETE.md  PHASE_7_OBSERVABILITY_FOUNDATION.md  PHASE_7_READY.md  QUICK_START.md  QUICK_START_GUIDE.md  QUICK_START_WEB_API.md  README-SETUP.md  README.md  START_SERVER.md  STREAMHOUSE_ARCHITECTURE_EXPLAINED.md  SUMMARY_WEB_CONSOLE.md  TESTING.md  TESTING_GUIDE.md  WEEK_14_TOPICS_PAGE_COMPLETE.md  audit.toml  clippy.toml  demo.sh  (+17 more)
crates/streamhouse-agent/: Cargo.toml
crates/streamhouse-agent/examples/: README.md  demo_phase_4_multi_agent.rs  local_workflow_test.rs  simple_agent.rs
crates/streamhouse-agent/src/: agent.rs  assigner.rs  connection_pool.rs  error.rs  grpc_service.rs  heartbeat.rs  lease_manager.rs  lib.rs  metrics_server.rs  partition_monitor.rs  rebalancer.rs
crates/streamhouse-agent/tests/: agent_lifecycle_test.rs  lease_coordination_test.rs  lease_coordination_test.rs.bak  load_splitting_test.rs  multi_agent_test.rs
crates/streamhouse-api/: Cargo.toml
crates/streamhouse-api/src/: acl.rs  active_active.rs  audit.rs  audit_store.rs  auth.rs  clerk.rs  cluster.rs  compliance.rs  discovery.rs  failover.rs  health_monitor.rs  jwt.rs  leader.rs  lib.rs  models.rs  oauth.rs  oidc.rs  opa.rs  pitr.rs  prometheus.rs  rate_limit.rs  rbac.rs  replication.rs  sasl.rs  shutdown.rs  tls.rs
crates/streamhouse-api/tests/: api_integration_test.rs  chaos_failover_test.rs
crates/streamhouse-cli/: Cargo.toml  README.md  build.rs
crates/streamhouse-cli/src/: auth.rs  config.rs  declarative.rs  format.rs  main.rs  repl.rs  rest_client.rs
crates/streamhouse-cli/tests/: cli_integration_test.rs
crates/streamhouse-client/: Cargo.toml  README.md
crates/streamhouse-client/benches/: consumer_bench.rs  producer_bench.rs
crates/streamhouse-client/examples/: consumer_with_schema.rs  e2e_offset_tracking.rs  e2e_producer_consumer.rs  high_perf_producer.rs  load_test.rs  phase_7_complete_demo.rs  producer_with_schema.rs  simple_producer.rs  stress_test_components.rs  stress_test_e2e.rs  stress_test_failover.rs  throttle_demo.rs
crates/streamhouse-client/src/: agent_router.rs  batch.rs  connection_pool.rs  consumer.rs  error.rs  lib.rs  producer.rs  retry.rs  schema_registry_client.rs
crates/streamhouse-client/tests/: consumer_integration.rs  grpc_advanced.rs  integration_grpc.rs  producer_integration.rs  producer_integration_test.rs  schema_registry_integration.rs
crates/streamhouse-connectors/: Cargo.toml
crates/streamhouse-connectors/src/: config.rs  error.rs  lib.rs  pipeline.rs  runtime.rs  traits.rs
crates/streamhouse-e2e/: Cargo.toml
crates/streamhouse-e2e/src/: lib.rs
crates/streamhouse-e2e/tests/: full_write_path.rs  kafka_protocol.rs  postgres_minio.rs
crates/streamhouse-kafka/: Cargo.toml
crates/streamhouse-kafka/examples/: kafka_rate_limit_test.rs  kafka_smoke_test.rs
crates/streamhouse-kafka/src/: codec.rs  coordinator.rs  error.rs  lib.rs  server.rs  tenant.rs  types.rs
crates/streamhouse-kafka/tests/: protocol_edge_cases.rs
crates/streamhouse-loadtest/: Cargo.toml
crates/streamhouse-loadtest/src/: config.rs  http_client.rs  kafka_wire.rs  main.rs  metrics.rs  setup.rs
crates/streamhouse-metadata/: .sqlxrc.json  Cargo.toml
crates/streamhouse-metadata/migrations/: 001_initial_schema.sql  002_agent_coordination.sql  003_multi_tenancy.sql  004_exactly_once.sql  005_fast_leader_handoff.sql  006_compacted_topics.sql  007_materialized_views.sql  008_connectors.sql  009_numeric_producer_ids.sql  010_add_segment_timestamps.sql  011_clerk_org_id.sql  012_connectors_org_scoping.sql  014_api_key_rate_limits.sql  015_pipelines.sql  016_rename_clerk_to_external_id.sql  017_deployment_mode.sql  018_remove_default_org.sql
crates/streamhouse-metadata/migrations-postgres/: 001_initial_schema.sql  001_schema.sql  002_agent_coordination.sql  002_remove_default_org.sql  003_schema_registry.sql  004_multi_tenancy.sql  005_fast_leader_handoff.sql  006_exactly_once.sql  007_materialized_views.sql  008_compacted_topics.sql  009_connectors.sql  010_fix_org_timestamps_and_consumer_offsets.sql  011_fix_partitions_pk.sql  012_add_segment_timestamps.sql  013_clerk_org_id.sql  014_connectors_org_scoping.sql  015_transactions_org_scoping.sql  016_api_key_rate_limits.sql  016_pipelines.sql  018_rename_clerk_to_external_id.sql  019_deployment_mode.sql
crates/streamhouse-metadata/src/: auth.rs  backup.rs  cached_store 2.rs  cached_store.rs  dedup 2.rs  dedup.rs  error.rs  lib 2.rs  lib.rs  postgres.rs  quota 2.rs  quota.rs  store 2.rs  store.rs  store.rs.backup  tenant.rs  transaction.rs  types 2.rs  types.rs
crates/streamhouse-metadata/tests/: integration_tests.rs
crates/streamhouse-observability/: Cargo.toml
crates/streamhouse-observability/src/: exporter.rs  lib.rs  metrics.rs
crates/streamhouse-schema-registry/: Cargo.toml
crates/streamhouse-schema-registry/migrations/: 001_schema_registry.sql
crates/streamhouse-schema-registry/src/: api.rs  compatibility.rs  error.rs  lib.rs  registry.rs  serde.rs  storage.rs  storage_postgres.rs  types.rs
crates/streamhouse-schema-registry/tests/: integration_test.rs  storage_postgres_test.rs
crates/streamhouse-server/: Cargo.toml  README.md  build.rs
crates/streamhouse-server/proto/: streamhouse.proto
crates/streamhouse-server/src/: compaction.rs  lib.rs  main.rs  pipeline_maintenance.rs  (+1 more)
crates/streamhouse-sql/: Cargo.toml
crates/streamhouse-storage/: Cargo.toml
examples/production-demo/: Cargo.toml  README.md  run-demo.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: kafka_protocol.rs  record_serde.rs  segment_reader.rs  sql_parser.rs
sdks/python/: README.md  pyproject.toml
(+646 files in other folders)
