[workspace]
resolver = "2"
members = [
    "crates/streamhouse-core",
    "crates/streamhouse-storage",
    "crates/streamhouse-metadata",
    "crates/streamhouse-agent",
    "crates/streamhouse-kafka",
    "crates/streamhouse-sql",
    "crates/streamhouse-server",
    "crates/streamhouse-cli", "crates/streamhouse-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StreamHouse Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/streamhouse"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"

# Data processing
arrow = "50.0"
datafusion = "35.0"
parquet = "50.0"

# Storage
object_store = { version = "0.9", features = ["aws", "http"] }
aws-sdk-s3 = "1.13"
aws-config = "1.1"

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
rocksdb = "0.21"

# Networking
tonic = { version = "0.11", features = ["transport"] }
tonic-build = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
hyper = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Utilities
bytes = { version = "1.5", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Checksums
crc32fast = "1.3"

# Caching
lru = "0.12"

# Time
chrono = "0.4"

# Config
toml = "0.8"

# Testing
tempfile = "3.8"
criterion = "0.5"

# Formatting
colored = "2.1"

# User directories
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
