[workspace]
resolver = "2"
members = [
    "crates/streamhouse-core",
    "crates/streamhouse-storage",
    "crates/streamhouse-metadata",
    "crates/streamhouse-agent",
    "crates/streamhouse-kafka",
    "crates/streamhouse-sql",
    "crates/streamhouse-server",
    "crates/streamhouse-cli",
    "crates/streamhouse-client",
    "crates/streamhouse-proto",
    "crates/streamhouse-api",
    "crates/streamhouse-schema-registry", "crates/streamhouse-observability",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StreamHouse Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/streamhouse"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# Data processing (Arrow/DataFusion for high-performance query execution)
arrow = "53.0"
datafusion = "43.0"
parquet = "53.0"

# Storage
object_store = { version = "0.9", features = ["aws", "http"] }
aws-sdk-s3 = "1.13"
aws-config = "1.1"

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
rocksdb = "0.21"

# Networking
tonic = { version = "0.11", features = ["transport"] }
tonic-build = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
hyper = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
apache-avro = "0.16"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Utilities
bytes = { version = "1.5", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Checksums
crc32fast = "1.3"
crc32c = "0.6"

# Caching
lru = "0.12"

# Time
chrono = "0.4"

# UUID
uuid = { version = "1.7", features = ["v4"] }

# Config
toml = "0.8"

# Testing
tempfile = "3.8"
criterion = "0.5"

# Formatting
colored = "2.1"
comfy-table = "=7.1.0"  # Pin to avoid unstable feature in 7.2.x

# User directories
dirs = "5.0"

# Observability
prometheus-client = "0.22"
axum = { version = "0.7", features = ["macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
