[package]
name = "streamhouse-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1.5"
serde_json = "1.0"

# StreamHouse crates under test
streamhouse-core = { path = "../crates/streamhouse-core" }
streamhouse-storage = { path = "../crates/streamhouse-storage" }
streamhouse-kafka = { path = "../crates/streamhouse-kafka" }
streamhouse-sql = { path = "../crates/streamhouse-sql" }

# For Kafka codec fuzzing
tokio-util = { version = "0.7", features = ["codec"] }

[[bin]]
name = "fuzz_segment_reader"
path = "fuzz_targets/segment_reader.rs"
doc = false

[[bin]]
name = "fuzz_kafka_protocol"
path = "fuzz_targets/kafka_protocol.rs"
doc = false

[[bin]]
name = "fuzz_sql_parser"
path = "fuzz_targets/sql_parser.rs"
doc = false

[[bin]]
name = "fuzz_record_serde"
path = "fuzz_targets/record_serde.rs"
doc = false
