[package]
name = "streamhouse-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
metrics = ["prometheus-client", "axum"]

[dependencies]
streamhouse-core = { path = "../streamhouse-core" }
streamhouse-metadata = { path = "../streamhouse-metadata" }
streamhouse-storage = { path = "../streamhouse-storage" }
streamhouse-proto = { path = "../streamhouse-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
object_store = { workspace = true }
hostname = "0.3"
uuid = { version = "1.6", features = ["v4"] }

# Observability (optional)
prometheus-client = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
