[package]
name = "streamhouse-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# HTTP framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { workspace = true, features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = "1.0"
bytes = { workspace = true }
apache-avro = { workspace = true }

# OpenAPI docs
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = "0.3"

# Time
chrono = "0.4"

# HTTP client for Prometheus queries and AI APIs
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Cryptography for API key hashing, JWT, and SCRAM
sha2 = "0.10"
jsonwebtoken = "9"
hmac = "0.12"
pbkdf2 = "0.12"

# OAuth2/OIDC support
getrandom = "0.2"
urlencoding = "2.1"
base64 = "0.22"

# TLS support
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# System utilities
hostname = "0.4"

# Lazy initialization
lazy_static = "1.4"

# Schema validation
jsonschema = { workspace = true }

# StreamHouse dependencies
streamhouse-metadata = { path = "../streamhouse-metadata" }
streamhouse-client = { path = "../streamhouse-client" }
streamhouse-storage = { path = "../streamhouse-storage" }
streamhouse-sql = { path = "../streamhouse-sql" }
streamhouse-schema-registry = { path = "../streamhouse-schema-registry" }
object_store = { workspace = true }

[features]
postgres = ["streamhouse-metadata/postgres"]

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = "0.1"
hyper = "1.1"

[[bin]]
name = "api"
path = "src/bin/api.rs"
