[package]
name = "streamhouse-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "streamctl"
path = "src/main.rs"

[dependencies]
# gRPC client
tonic = { workspace = true }
prost = { workspace = true }

# Async
tokio = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = "0.21"
serde_json = "1.0"

[build-dependencies]
tonic-build = { workspace = true }
