[package]
name = "streamhouse-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "streamctl"
path = "src/main.rs"

[dependencies]
# gRPC client
tonic = { workspace = true }
prost = { workspace = true }

# HTTP client for REST API
reqwest = { version = "0.12", features = ["json"] }

# Async
tokio = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Interactive REPL
rustyline = "14.0"
rustyline-derive = "0.10"

# Utilities
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = "0.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Output formatting
tabled = "0.15"  # For table output
colored = "2.1"  # For colored terminal output
toml = "0.8"     # For config file parsing

# URL and time handling
urlencoding = "2.1"
chrono = "0.4"

[build-dependencies]
tonic-build = { workspace = true }
