[package]
name = "streamhouse-metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
streamhouse-core = { path = "../streamhouse-core" }
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
lru = "0.12"

[features]
default = ["sqlite"]
sqlite = []
postgres = ["sqlx/postgres", "sqlx/json"]
all-backends = ["sqlite", "postgres"]
