[package]
name = "streamhouse-metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
streamhouse-core = { path = "../streamhouse-core" }
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio", "migrate", "json", "chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
rand = "0.8"
lru = "0.12"
regex = "1"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
all-backends = ["sqlite", "postgres"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("axum"))'] }
