[package]
name = "streamhouse-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
streamhouse-core = { path = "../streamhouse-core" }
streamhouse-storage = { path = "../streamhouse-storage" }
streamhouse-metadata = { path = "../streamhouse-metadata" }
streamhouse-api = { path = "../streamhouse-api" }
streamhouse-schema-registry = { path = "../streamhouse-schema-registry" }
streamhouse-client = { path = "../streamhouse-client" }
streamhouse-observability = { path = "../streamhouse-observability" }

# gRPC
tonic = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }

# HTTP
axum = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Storage
object_store = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"], optional = true }

# Utilities
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
postgres = ["dep:sqlx"]

[[bin]]
name = "unified-server"
path = "src/bin/unified-server.rs"
