[package]
name = "streamhouse-sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL query engine for StreamHouse message browsing"

[dependencies]
# SQL parsing
sqlparser = "0.41"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time handling
chrono = "0.4"

# Apache Arrow & DataFusion for high-performance query execution
arrow = { workspace = true }
datafusion = { workspace = true }
parquet = { workspace = true }

# StreamHouse dependencies
streamhouse-metadata = { path = "../streamhouse-metadata" }
streamhouse-storage = { path = "../streamhouse-storage" }
object_store = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
