[package]
name = "streamhouse-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
streamhouse-core = { path = "../streamhouse-core" }
bytes = { workspace = true }
lz4_flex = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "segment_bench"
harness = false
