[package]
name = "streamhouse-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
streamhouse-core = { path = "../streamhouse-core" }
streamhouse-metadata = { path = "../streamhouse-metadata" }
bytes = { workspace = true }
lz4_flex = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "segment_bench"
harness = false
