[package]
name = "streamhouse-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
postgres = ["streamhouse-metadata/postgres"]

[dependencies]
streamhouse-core = { path = "../streamhouse-core" }
streamhouse-metadata = { path = "../streamhouse-metadata" }
streamhouse-observability = { path = "../streamhouse-observability" }
bytes = { workspace = true }
lz4_flex = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
lru = { workspace = true }
futures = { workspace = true }
bloomfilter = "1.0"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[example]]
name = "test_100_messages"
required-features = ["postgres"]

[[bench]]
name = "segment_bench"
harness = false
