# Production Demo - E-Commerce Order Pipeline
#
# This workspace contains 3 microservices demonstrating StreamHouse integration:
# 1. order-service: REST API that produces orders to StreamHouse
# 2. analytics-service: Consumes orders and calculates real-time metrics
# 3. inventory-service: Consumes orders, checks stock, produces inventory updates
#
# Run: ./run-demo.sh

[workspace]
members = [
    "order-service",
    "analytics-service",
    "inventory-service",
]
resolver = "2"

[workspace.dependencies]
# StreamHouse client
streamhouse-proto = { path = "../../crates/streamhouse-proto" }
tonic = { version = "0.11", features = ["transport"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server (for order-service)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client (for schema registry)
reqwest = { version = "0.11", features = ["json"] }

# Avro serialization
apache-avro = "0.16"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
