[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamhouse"
version = "0.1.0"
description = "Python client for StreamHouse streaming data platform"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "StreamHouse Team"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["streamhouse", "streaming", "kafka", "data", "client"]

dependencies = []

[project.optional-dependencies]
sync = ["requests>=2.28.0"]
async = ["aiohttp>=3.8.0"]
all = ["requests>=2.28.0", "aiohttp>=3.8.0"]
dev = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/streamhouse/streamhouse"
Documentation = "https://docs.streamhouse.io"
Repository = "https://github.com/streamhouse/streamhouse"
Issues = "https://github.com/streamhouse/streamhouse/issues"

[tool.setuptools.packages.find]
include = ["streamhouse*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
