[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"
description = "Demo inventory service that consumes orders and produces inventory updates"

[dependencies]
streamhouse-proto = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
