[package]
name = "order-service"
version = "0.1.0"
edition = "2021"
description = "Demo order service that produces to StreamHouse"

[dependencies]
streamhouse-proto = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
apache-avro = { workspace = true }
